# outtesttask

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_wallets_table.py
src/: main.py
src/application/services/: wallet_service.py
src/domain/: exceptions.py
src/domain/entities/: wallet.py
src/domain/repositories/: wallet_repository.py
src/infrastructure/: di.py
src/infrastructure/db/: models.py  repositories.py  session.py
src/presentation/api/rest/v1/: routers.py
src/presentation/api/rest/v1/endpoints/: __init__.py  change_wallet_balance.py  get_wallet_balance.py
src/presentation/api/rest/v1/schemas/: wallet.py  wallet_balance.py  wallet_operation.py
tests/: test_wallet_api.py
