[project]
name = "outtesttask"
version = "0.1.0"
description = "Test task: wallet service with async FastAPI and clean architecture"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.9.1",
    "fastapi>=0.135.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "asyncpg>=0.30.0",
    "uvicorn[standard]>=0.32.0",
    "alembic>=1.14.0",
    "ruff>=0.15.6",
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
